# uncore

./: .editorconfig  .env  .gitignore  .gitlab-ci.yml  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug.md  feature-request.md  feature_request.md  other.md  update.md
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: linting.yml  testing.yml
documentation/: Cargo.toml  Dockerfile  Makefile  build.sh  mkdocs.yml
documentation/docs/: development.md  index.md
documentation/src/: main.rs
lints/: eclint.sh  shellcheck.sh
scripts/: adjust_version.sh  init.sh
scripts/lib/: errors.sh  logs.sh
scripts/lints/: eclint.sh  shellcheck.sh
src/: lib.rs  main.rs
src/core_lib/: helper.rs  mod.rs  panic.rs  serial.rs  testing.rs  write.rs
src/core_lib/hw/: init.rs  mod.rs
src/core_lib/hw/cpu/: exceptions_handlers.rs  gdt.rs  mod.rs  tss.rs
src/core_lib/hw/io/: interrupts.rs  write.rs
src/core_lib/misc/: helper.rs
src/core_lib/tests/: testing.rs
tests/: basic_boot.rs  stack_overflow.rs
