[package]
edition = "2018"
name = "uncore"
version = "0.1.0"

authors = [
  "Georg Lauterbach <uncore@uncore.com>",
]

description = "An Operating System Kernel written in Rust"
documentation = "https://docs.rs/uncore/0.1.0/uncore/"

readme = "./README.md"

homepage = "https://uncore.io"
repository = "https://github.com/aendeavor/uncore"

license = "GPL-3.0"

keywords = [
  "operating-system",
  "os",
  "kernel",
  "micro-kernel",
  "no-std",
]

categories = [
  "no-std",
  "config"
]

publish = true

autobins = true
autoexamples = true
autotests = true
autobenches = true

[dependencies]
bootloader = "0.9.11"
lazy_static = { version = "1.4.0", features = [ "spin_no_std" ] }
pc-keyboard = "0.5.1"
pic8259_simple = "0.2.0"
spin = "0.7.0"
uart_16550 = "0.2.10"
volatile = "0.2.6"
x86_64 = "0.12.3"

[package.metadata.bootimage]
test-args = [
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x04",

  "-serial",
  "stdio",

  "-display",
  "none"
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 100          # in seconds

[[test]]
name = "stack_overflow"
harness = false
